# service_send_message

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_detail.html  article_list.html
config/: settings.py  urls.py
data/: data_auth.json  data_blog.json  data_mailing.json  data_user.json
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_remove_mailingconfig_period_mailing_and_more.py  0003_client_owner_mail_owner_mailingconfig_owner.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contacts.html  index.html  mail_confirm_delete.html  mail_detail.html  mail_form.html  mail_list.html  mailingconfig_confirm_delete.html  mailingconfig_detail.html  mailingconfig_form.html  mailingconfig_list.html
mailing/templates/mailing/includes/: inc_blog.html  inc_main_menu.html
static/css/: blog.css  sign-in.css
users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_country.py
users/templates/users/: login.html  register.html  user_form.html  user_list.html
