[tool.poetry]
name = "service-send-message"
version = "0.1.0"
description = "This application was created to send messages to customers"
authors = ["Антон Федяев <fearthe54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2024.1"
psycopg2 = "^2.9.9"
django-apscheduler = "^0.6.2"
python-dotenv = "^1.0.1"
sqlparse = "^0.5.0"
tzdata = "^2024.1"
tzlocal = "^5.2"
redis = "^5.0.3"
pytz = "^2024.1"
pillow = "^10.3.0"
async-timeout = "^4.0.3"
apscheduler = "^3.10.4"
asgiref = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
